[package]
name = "engineio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4.1", features = ["v4", "serde"]}
dashmap = { version = "5.5.3" } 
serde_json = "1.0.105"
# TODO: Would be nice if serde was optional
serde = { version = "1.0.189", features = ["derive"]} 

# Async 
futures-util = { version = "0.3.28", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-stream = { version = "0.1.14", optional = true } 

# Actix Integration 
actix-web = { version = "4.4.0", optional = true }
actix-ws = { version = "0.2.5", optional = true }

[dev-dependencies]
# Examples Shared 
log = "0.4.20"
env_logger = "0.10.0"

# Examples Actix 
actix-rt = "2.9.0"

[features]
default = ["actix"]
async = ["dep:tokio", "dep:tokio-stream", "dep:futures-util"]
actix = ["dep:actix-ws", "dep:actix-web", "async"]

[[example]]
name = "actix"
required-features = ["actix"]
path = "examples/actix.rs"

