[package]
name = "engineio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4.1", features = ["v4", "serde"]}
serde_json = "1.0.105"
# TODO: Would be nice if serde was optional
serde = { version = "1.0.189", features = ["derive"]} 

# Async 
futures-util = { version = "0.3.28", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-stream = { version = "0.1.14", optional = true, features = ["sync"] } 

# Actix Integration 
actix-web = { version = "4.4.0", optional = true }
actix-ws = { version = "0.2.5", optional = true }
actix-rt = { optional = true }
reqwest = { version = "0.11.25", optional = true, features = ["json"] } 
url = { version = "2.5.0", optional = true }
pin-project = "1.1.5"
trait-variant = "0.1.2"

[dev-dependencies]
# Examples Shared 
log = "0.4.20"
env_logger = "0.10.0"

# Examples Actix 
actix-rt = "2.9.0"

[features]
default = ["actix", "reqwest"]
client = ["dep:url"]
async = ["dep:tokio", "dep:tokio-stream", "dep:futures-util"]
actix = ["dep:actix-ws", "dep:actix-web", "dep:actix-rt", "async"]
# TODO: can we just reimport url from requests ?
reqwest = ["dep:reqwest", "async", "client"]

#[[example]]
#name = "actix"
#required-features = ["actix"]
#path = "examples/actix.rs"
#
#[[example]]
#name = "reqwest"
#required-features = ["reqwest"]
#path = "examples/client_reqwest.rs"
