[package]
name = "engineio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.105"
serde = { version = "1.0.189", features = ["derive"]} 
serde_repr = "0.1"
thiserror = "1.0.63"


[dev-dependencies]

[features]

