[package]
name = "engineio_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
engineio3 = { path = "../engineio3" }
js-sys = "0.3.69"
serde_json = "1.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen-futures  = "0.4.42"
futures = "0.3.30"
console_log = { version = "1", features = ["color"] }
log = "0.4"
web-time = "1.1.0"


[dependencies.web-sys]
version = "0.3.22"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]
